re PR middle-end/29943 (gcc generate incorrect alias symbols for PPC)

PR target/29943
	* varasm.c (use_blocks_for_decl_p): Return false for decls with
	alias attribute.

From-SVN: r122148